<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">和农庄</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xnb_shouye">首页</string>
    <string name="xnb_msg">众筹</string>
    <string name="xnb_fenlei">园主秀</string>
    <string name="xnb_faxian">休闲</string>
    <string name="xnb_me">我的</string>

</resources>
