<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xnb_bg" >

    <RelativeLayout
        android:id="@+id/categoryTitle"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:background="@color/xnb_bg_title"
        android:orientation="horizontal" >

        <!--
          <ImageView
                android:id="@+id/tianqi_imageview"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/logxnb"
                 />
        -->

        <TextView
            android:id="@+id/category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="@string/xnb_msg"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/button_sousuo"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/button_add"
            android:onClick="onClick"
            android:src="@drawable/xnbsousuo"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:onClick="onClick"
            android:src="@drawable/gwc"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone"
             />
         <ImageView
            android:id="@+id/iv_shezhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:onClick="onClick"
            android:src="@drawable/shezhi"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
           
             />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lin_btm"
        android:layout_below="@+id/categoryTitle"
        android:background="#ffffff" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/lin_btm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#eaeaea"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/tabmain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|top" >

                <ImageView
                    android:id="@+id/button_shouye"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/sshouye1" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_shouye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xnb_shouye"
                android:textColor="#858585"
                android:textSize="11sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|top" >

                <ImageView
                    android:id="@+id/button_xiaoxi"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/msg1" />

                <TextView
                    android:id="@+id/msg_un"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/redcircle"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="9sp"
                    android:textColor="#fff" 
                    android:visibility="gone"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_xiaoxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xnb_msg"
                android:textColor="#858585"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|top" >

                <ImageView
                    android:id="@+id/button_fenlei"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/fenlei1" />

                <TextView
                    android:id="@+id/dongtai_un"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/redcircle"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#fff"
                    android:textSize="9sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_fenlei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xnb_fenlei"
                android:textColor="#858585"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.99"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|top" >

                <ImageView
                    android:id="@+id/button_menu"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/publicxnb1" />

                <TextView
                    android:id="@+id/usename"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/circle"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:textColor="#fff"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xnb_fabu"
                android:textColor="#ffffff"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:gravity="center"
            android:orientation="vertical" 
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|top" >

                <ImageView
                    android:id="@+id/button_find"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/find1" />

                <TextView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/circle"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:textColor="#fff"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xnb_faxian"
                android:textColor="#858585"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/button_more"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="@drawable/me_on" />

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xnb_me"
                android:textColor="#858585"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>